syntax = "proto3";

package email;
option go_package = "github.com/yourusername/project/cloud_commons/proto/email";

service EmailService {
  rpc SendVerificationEmail(SendVerificationEmailRequest) returns (SendVerificationEmailResponse);
}

message SendVerificationEmailRequest {
  string link = 1;
  string email = 2;
}

message SendVerificationEmailResponse {
  bool success = 1;
  string message = 2;
}
